--- a/seguimiento_ciudadano/templates/seguimiento_ciudadano/login.html
+++ b/seguimiento_ciudadano/templates/seguimiento_ciudadano/login.html
@@ -1,84 +1,58 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="es">
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Tell the browser to be responsive to screen width -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/rh.png">
-    <title>Administrador SIDE</title>
-    <link href="dist/css/style.min.css" rel="stylesheet">
-    <link href="css/custom.min.css" rel="stylesheet">
+    {%  load static %}
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Seguimiento ciudadano - {% block title %} {% endblock %}</title>
+    <!-- static assets -->
+	<link rel="icon" type="image/x-icon" href="{% static 'seguimiento_ciudadano/img/favicon.ico' %}">
+	<link rel="stylesheet" href="{% static 'seguimiento_ciudadano/css/bootstrap/css/bootstrap.css' %}">
+	<link rel="stylesheet" href="{% static 'seguimiento_ciudadano/css/lobe.css' %}">
+	<script src="{% static 'seguimiento_ciudadano/css/bootstrap/js/bootstrap.bundle.js' %}"></script>
+	<script src="{% static 'seguimiento_ciudadano/js/jquery-3.6.4.js' %}"></script>
+	<script defer src="{% static 'seguimiento_ciudadano/css/FontAwesomePro/all.js' %}"></script>
+	<script defer src="{% static 'seguimiento_ciudadano/js/lobe.js' %}"></script>
+	<link rel="stylesheet" href="{% static 'seguimiento_ciudadano/Fonts/AvenirNextPro/stylesheet.css' %}" />
+	<link rel="stylesheet" href="{% static 'seguimiento_ciudadano/Fonts/LabGrotesque/stylesheet.css' %}" />
+	<link rel="stylesheet" href="{% static 'seguimiento_ciudadano/css/animate.css' %}" />
+  <link href="{% static 'seguimiento_ciudadano/js/DataTables/datatables.min.css' %}" rel="stylesheet">
+  <script src="{% static 'seguimiento_ciudadano/js/DataTables/datatables.min.js' %}"></script>
+
 </head>
-
-<body>
-    <div class="main-wrapper">       
-        <div class="preloader">
-            <div class="lds-ripple">
-                <div class="lds-pos"></div>
-                <div class="lds-pos"></div>
+  <body>
+  <div id="BodyWrapper">
+    <div class="login" style="display: flex; align-items: center; justify-content: center; height: 100vh;">
+        <div class="position-absolute w-100 h-100 z-0" style="background: transparent url({% static  'seguimiento_ciudadano/img/auth-bg.jpg' %}) no-repeat fixed center/cover"></div>
+        {% block content %}
+        <div class="form-container position-relative d-flex align-items-center justify-content-center">
+          <div class="form-login-blur"></div>
+          <form action="{% url 'seguimiento_ciudadano:Iniciar sesión' %}" method="post" class="z-1">
+            {% csrf_token %}
+            <div class="img-fluid mb-3" >
+              <img src="{% static 'seguimiento_ciudadano/img/LogoSecretaria.png' %}" alt="" style="max-height:120px">
             </div>
+            <div class="mb-3">
+              <label for="username" class="form-label">Usuario:</label>
+              <input type="text" class="form-control" id="username" name="username" aria-describedby="username">
+              <div id="usernameHelp" class="form-text">Nunca compartimos tus datos.</div>
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Contraseña:</label>
+              <input type="password" class="form-control" id="password" name="password">
+            </div>
+            <div class="mb-3 form-check d-flex justify-content-center">
+              <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+            </div>
+          </form>
+          
         </div>
-        <a class="hiddenanchor" id="signup"></a>
-        <a class="hiddenanchor" id="signin"></a>  
-        <div class="auth-wrapper d-flex no-block justify-content-center align-items-center position-relative"
-            style="background:url(assets/images/big/auth-bg.jpg) no-repeat center center;">          
-                <div class="auth-box row">
-                <div class="col-lg-7 col-md-5 modal-bg-img" style="background-image: url(assets/images/login.jpg);">
-                </div>
-                
-                <div class="col-lg-5 col-md-7 bg-white" id="loginForm">
-                    <div class="p-3">
-                        <div class="text-center">
-                            <img src="assets/images/rh.png" alt="wrapkit" style="max-width: 98%;">
-                        </div>
-                        <h2 class="mt-3 text-center">Inicio de Sesión</h2>
-                        <form class="mt-4" action="action/login.php" method="post">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="form-group">
-                                        <label class="text-dark" for="email">Usuario
-                                            <input class="form-control" name="email"  type="text"
-                                                   placeholder="Correo">
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="col-lg-12">
-                                    <div class="form-group">
-                                        <label class="text-dark" for="pwd">Contraseña
-                                            <input class="form-control" name="password"  type="password"
-                                                   placeholder="Contraseña">
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="col-lg-12 text-center">
-                                    <button type="submit" name="token" value="Login" class="btn btn-block btn-dark">Iniciar Sesion</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>        
-    </div>    
-    <script src="assets/libs/jquery/dist/jquery.min.js "></script>   
-    <script src="assets/libs/popper.js/dist/umd/popper.min.js "></script>
-    <script src="assets/libs/bootstrap/dist/js/bootstrap.min.js "></script>    
-    <script>
-        $(".preloader ").fadeOut();
-    </script>
+        
+          {% endblock %}
+    </div>
 
-    <?php
-    $invalid=sha1(md5("login_error"));
-    if (isset($_GET['invalid']) && $_GET['invalid']==$invalid) echo
-    "<script type='text/javascript'>
-        let error = document.createElement('div');
-        error.setAttribute('style','color: #85293a;text-align: center;font-weight:bold');
-        error.innerText = 'Contraseña o correo electrónico inválido';
-        document.getElementById('loginForm').appendChild(error);</script>";
-    ?>
-</body>
+  </div>
+  </body>
 </html>
+<!---->
