--- a/seguimiento_ciudadano/templates/seguimiento_ciudadano/navbar.html
+++ b/seguimiento_ciudadano/templates/seguimiento_ciudadano/navbar.html
@@ -7,18 +7,6 @@
                     <div>Inicio</div>
                 </a>
                 {% if user.is_authenticated %}
-                <a class="nav-link" href="#">
-                    <div>Ejemplos</div>
-                </a>
-                <a class="nav-link" href="#">
-                    <div>Tour</div>
-                </a>
-                <a class="nav-link" href="#">
-                    <div>Blog</div>
-                </a>
-                <a class="nav-link" href="#">
-                    <div>Ayuda</div>
-                </a>
                 <a class="nav-link" href="{% url 'seguimiento_ciudadano:Logout' %}">
                     <div>Logout</div>
                 </a>
@@ -32,8 +20,8 @@
                 {% endif %}
             </nav>
         </div>
-        <div class="header-menu-download-button-container" style="opacity: 1; transform: scale(1);">
-            <button class="header-menu-download-button btn btn-SIDE">Descargar</button>
+        <div class="header-menu-download-button-container" style="opacity: 1; transform: scale(1);">                                  
+
         </div>
     </div>
     <div class="header-content">
@@ -47,18 +35,6 @@
                 <div>Inicio</div>
             </a>
             {% if user.is_authenticated %}
-            <a class="nav-link" href="#">
-                <div>Ejemplos</div>
-            </a>
-            <a class="nav-link" href="#">
-                <div>Tour</div>
-            </a>
-            <a class="nav-link" href="#">
-                <div>Blog</div>
-            </a>
-            <a class="nav-link" href="#">
-                <div>Ayuda</div>
-            </a>
             <a class="nav-link" href="{% url 'seguimiento_ciudadano:Logout' %}">
                     <div>Cerrar Sesión</div>
                 </a>
@@ -72,9 +48,21 @@
             {% endif %}
         </div>
         <div class="nav-right">
-            <button class="btn btn-SIDE rounded-5 header-download-button">
-                <div>Descargar</div>
-            </button>
+            {% if user.is_authenticated %}
+            <div class="dropdown">
+                <button class="btn header-download-button dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fa-duotone fa-user-alien fa-2x me-3"></i> Bienvenido, {{ user.get_username }}
+                </button>
+                <ul class="dropdown-menu">
+                    <li><button class="dropdown-item" type="button"><a class="nav-link" href="/admin"> Administrador </a></button></li>
+                    <li><button class="dropdown-item" type="button"><a class="nav-link" href="{% url 'seguimiento_ciudadano:Logout' %}"> Cerrar sesión </a></button></li>
+                  </ul>
+            </div>
+            {% else %}
+                <button class="btn">
+                    <a class="nav-link" href="{% url 'seguimiento_ciudadano:Iniciar sesión' %}"> Iniciar sesión</a>
+                </button>
+            {% endif %}
             <button class="header-menu-button" aria-label="Menu Button">
                 <div class="hamburger"><span></span></div>
             </button>
