--- a/seguimiento_ciudadano/templates/seguimiento_ciudadano/login.html
+++ b/seguimiento_ciudadano/templates/seguimiento_ciudadano/login.html
@@ -24,7 +24,7 @@
   <body>
   <div id="BodyWrapper">
     <div class="login" style="display: flex; align-items: center; justify-content: center; height: 100vh;">
-        <div class="position-absolute w-100 h-100 z-0" style="background: transparent url({% static  'seguimiento_ciudadano/img/auth-bg.jpg' %}) no-repeat fixed center/cover"></div>
+        <div class="background-reglog position-absolute w-100 z-0" style="background: transparent url({% static  'seguimiento_ciudadano/img/bg.jpg' %}) no-repeat fixed center/cover"></div>
         {% block content %}
         <div class="form-container position-relative d-flex align-items-center justify-content-center">
           <div class="form-login-blur"></div>
