--- a/seguimiento_ciudadano/static/seguimiento_ciudadano/css/lobe.css
+++ b/seguimiento_ciudadano/static/seguimiento_ciudadano/css/lobe.css
@@ -338,7 +338,10 @@ flex-direction: column;
     box-shadow: 0 100px 140px -50px rgba(0,0,0,.25), 0 0 20px 0 rgba(0,0,0,.03);
     transform: scale3d(1.01,1.01,1.01);
 }
-
+.background-reglog{
+    position: fixed;
+    min-height: 100vh;
+}
 
 @keyframes slideIn {
     0% {
@@ -456,7 +459,17 @@ flex-direction: column;
     .footer{
         padding: 0 32px;
     }
-
+    .form-container{
+        max-width: 95vw;
+        min-height: 60vh;
+    }
+    .form-container img {
+        max-width: 90vw;
+    }
+    .background-reglog{
+        position: fixed;
+        min-height: 150vh;
+    }
 }
 @media (min-width: 650px) and (max-width: 1200px){
     .section-heading{
