--- a/seguimiento_ciudadano/templates/seguimiento_ciudadano/index.html
+++ b/seguimiento_ciudadano/templates/seguimiento_ciudadano/index.html
@@ -1,32 +1,54 @@
 {% extends 'seguimiento_ciudadano/base.html' %}
 
 {% block content %}
+{% load static %}
     <div class="tourpage">
-        {% if messages %}
+    {% if messages %}
         <div class="alert alert-success alert-dismissible fade show" role="alert">
-          {% for message in messages %}
-          <strong {% if message.tags %} class="{{ message.tags }}"{% endif %}><i class="fa-regular fa-circle-info"></i>{{ message }}</strong>
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          {% endfor %}
+            {% for message in messages %}
+            <strong {% if message.tags %} class="{{ message.tags }}"{% endif %}><i class="fa-regular fa-circle-info"></i>{{ message }}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            {% endfor %}
         </div>
-        {% endif %}
+    {% endif %}
     <section class="section">
         <section class="section-content section-content-center">
-            <h1 class="section-heading">Lobe <span style="color: #CE0F69;">Tour</span></h1>
-            <div class="section-text">
-                {% if latest_question_list %}
-                    <ul>
-                    {% for question in latest_question_list %}
-                        <li>
-                            <a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a>
-                        </li>
-                {% endfor %}
-                    </ul>
-                {% else %}
-                    <p>No polls are available.</p>
-                {% endif %}
+            <h1 class="section-heading">Bienvenido al <span style="color: #CE0F69;">sistema de seguimiento de solicitudes</span></h1>
+            <p class="section-text">Basado en la api Open 311</p>
+            <div class="video-container" data-bs-toggle="modal" data-bs-target="#modalVideo" data-src="https://www.youtube.com/embed/d9_hiI7kt5s">
+                <div class="video-poster">
+                    <img src="{% static 'seguimiento_ciudadano/img/Whatis311Monitoring.png' %}" alt="video frame">
+                </div>
             </div>
         </section>
     </section>
+    {% if not user.is_authenticated %}
+    <section class="section section-final section-content-center">
+        <h2 class="section-heading">Crea tu cuenta y registra tu solicitud</h2>
+        <a href="{% url 'seguimiento_ciudadano:Registro Usuario' %}"><button class="btn btn-SIDE rounded-5 btn-registro-soli ">
+            <div>Regístrate aquí </div>
+        </button></a>
+    </section>
+    {% else %}
+    <section class="section section-final section-content-center">
+        <a href="{% url 'seguimiento_ciudadano:nueva_solicitud' %}"><button class="btn btn-SIDE rounded-5 btn-registro-soli">
+            <div>Crea tu solicitud</div>
+        </button></a>
+    </section>
+    {% endif %}
+    </div>
+    <!-- modal -->
+    <div class="modal fade" id="modalVideo" tabindex="-1" aria-labelledby="modalVideoLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-xl">
+          <div class="modal-content">
+            <button type="button" class="btn-close btn-close-modal" data-bs-dismiss="modal"></button>
+            <div class="modal-body">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="" id="video"  allowscriptaccess="always" allow="autoplay"></iframe>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 {% endblock %}
