--- a/seguimiento_ciudadano/templates/seguimiento_ciudadano/seguimiento_solicitud.html
+++ b/seguimiento_ciudadano/templates/seguimiento_ciudadano/seguimiento_solicitud.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 
-
+                tdP7Y$MeAQaLH8*
 
 
 
@@ -83,7 +83,7 @@
                 <h4>Historial de actividades</h4>
                 {% if seguimiento_solicitud %}
                         <ol class="list-group list-group-numbered mt-3 ">
-                            {% for actividad in seguimiento_solicitud reversed%}
+                            {% for actividad in seguimiento_solicitud reversed %}
                             <li class="list-group-item d-flex justify-content-between align-items-start">
                               <div class="ms-2 me-auto">
                                 <div class="fw-bold">{{actividad.fecha_actualizacion}}</div>
@@ -120,11 +120,9 @@
                     <button type="submit" class="btn btn-primary" onclick="clicksave()">Save changes</button>
                 </div>
             </div>
-            
         </div>
         <script>
             function clicksave(){
-                console.log("enttreee");
                 var button = $("#savehide")
                 button.click();
                 console.log(button);
